--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Brayan Arellano, Jhon Males, Jared Peralta",
   "license": "ISC",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.18.2",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.0.1",
