--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "1.9.7",
     "date-fns": "2.30.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-redux": "8.1.3",
     "react-router-dom": "6.19.0"
