--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-redux": "8.1.3",
-    "react-router-dom": "6.19.0"
+    "react-router-dom": "6.19.0",
+    "vite-plugin-pwa": "^0.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
