--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node  index.js",
+    "dev": "cls && node  index.js",
     "start": "set NODE_ENV=production && node index.js"
   },
   "author": "Brayan Arellano, Jhon Males, Jared Peralta",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "2.8.5",
     "express": "4.18.2",
     "jsonwebtoken": "9.0.2",
